added workshop writers

--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,8 @@ version = "1.11.0"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
+FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
@@ -14,6 +16,8 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 CSV = "0.10.15"
 CategoricalArrays = "0.10.8"
 DataFrames = "1.7.0"
+Downloads = "1.6.0"
+FilePathsBase = "0.9.24"
 Random = "1.11.0"
 Revise = "3.7.3"
 julia = "1.6.7"
